--- a/css/styles.css
+++ b/css/styles.css
@@ -189,9 +189,10 @@ adresse {
   padding-bottom: 120px;
 }
 .features-container {
+  display: flex;
+  flex-wrap: wrap;
   margin: 0 auto;
   max-width: 1128px;
-  display: flex;
 }
 .visually-hidden {
   position: absolute;
@@ -206,7 +207,8 @@ adresse {
 }
 .features-list {
   display: flex;
-  width: calc((100%-24 * 3) / 4);
+  justify-content: space-between;
+  align-items: normal;
 }
 .features-item {
 }
@@ -276,15 +278,12 @@ adresse {
   letter-spacing: 0.02em;
 }
 .section-portfolio {
-  padding: 120px 156px 130px 156px;
+  padding: 120px 156px 129px 156px;
 }
 
 .portfolio-container {
-  display: flex;
-  flex-wrap: wrap;
-
+  display: block;
   margin: 0 auto;
-  max-width: 1128px;
   color: var(--white);
 }
 .portfolio-title {
@@ -294,14 +293,13 @@ adresse {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   padding-bottom: 72px;
+  color: var(--navy-blue);
 }
 .portfolio-list {
   display: flex;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
-  flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   border: 1px solid var(--cornflower);
 }
@@ -313,19 +311,25 @@ adresse {
   letter-spacing: 0.02em;
   border: 1px solid var(--cornflower);
   display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  padding-bottom: 32px;
 }
 .portfolio-img {
   width: 360px;
   height: 300px;
+  padding-bottom: 32px;
 }
 .portfolio-name {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: left;
+  padding-left: 16px;
 }
 
 .portfolio-text {
   text-align: left;
+  padding-left: 16px;
 }
 .page-footer {
   padding-top: 100px;
