--- a/css/styles.css
+++ b/css/styles.css
@@ -68,9 +68,11 @@ address {
   gap: 40px;
   justify-content: space-between;
   align-items: center;
+  width: 1158px;
 }
 .nav-page {
   display: flex;
+  align-items: center;
 }
 .link-logo-header {
   font-family: "Raleway", sans-serif;
@@ -80,6 +82,7 @@ address {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--iris);
+  margin-right: 76px;
 }
 .logo-dark {
   font-family: "Raleway", sans-serif;
@@ -178,8 +181,7 @@ address {
   background-color: #404bbf;
 }
 .section-features {
-  padding-bottom: 120px;
-  padding-top: 194px;
+  padding: 120px 0;
 }
 .features-container {
   display: flex;
@@ -204,7 +206,7 @@ address {
   gap: 24px;
 }
 .features-item {
-  max-width: 264px;
+  width: calc((100%-72px) / 4);
 }
 .features-name {
   font-weight: 500;
@@ -212,6 +214,7 @@ address {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--navy-blue);
+  margin-bottom: 8px;
 }
 .features-text {
   line-height: 1.5;
