--- a/css/styles.css
+++ b/css/styles.css
@@ -221,7 +221,7 @@ address {
   letter-spacing: 0.02em;
 }
 .section-team {
-  padding-top: 120px 156px;
+  padding-top: 120px 0 120px;
   background-color: #f4f4fd;
 }
 .team-container {
@@ -236,7 +236,7 @@ address {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  padding: 72px;
+  margin-bottom: 72px;
 }
 .team-list {
   display: flex;
@@ -250,7 +250,7 @@ address {
   gap: 32px;
   border-radius: 0 0 4px 4px;
   padding: 0px 0px 32px;
-  width: 264px;
+  width: calc((100%-72px)/4)
   height: 380px;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
@@ -261,6 +261,9 @@ address {
   width: 264px;
   height: 260px;
 }
+.team-wrap {
+  padding: 32px 0;
+}
 
 .team-name {
   color: #2e2f42;
@@ -268,14 +271,17 @@ address {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 8px;
 }
 .team-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  text-align: center;
 }
 .section-portfolio {
-  padding: 120px 156px 129px 156px;
+  padding: 120px 0 120px 0;
 }
 
 .portfolio-container {
@@ -286,7 +292,7 @@ address {
   text-align: center;
   letter-spacing: 0.02em;
   text-transform: capitalize;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
   color: var(--navy-blue);
 }
 .portfolio-list {
@@ -306,8 +312,10 @@ address {
   flex-direction: column;
   justify-content: flex-start;
   padding-bottom: 32px;
+  max-width: calc((100%-48px)/3);
 }
 .portfolio-card-set {
+ 
 }
 .portfolio-card-img {
 }
@@ -317,10 +325,14 @@ address {
 }
 .portfolio-card-text {
   padding: 32px 16px;
+  border: 1px solid #e7e9fc; 
+  border-top: none;
+  
 }
 .portfolio-name {
   line-height: 1.5;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .portfolio-text {
@@ -328,9 +340,7 @@ address {
   padding: 32px 16px;
 }
 .page-footer {
-  padding-top: 100px;
-  padding-bottom: 100px;
-  padding-left: 156px;
+  padding: 100px 0 100px
   background-color: #2e2f42;
 }
 .footer-container {
@@ -344,6 +354,8 @@ address {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .logo-light {
   color: var(--cloud);
