--- a/css/styles.css
+++ b/css/styles.css
@@ -195,10 +195,12 @@ address {
   height: 1px;
   padding: 0;
   margin: -1px;
+  border: 0;
+  white-space: nowrap;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border: 0;
+  clip-path: inset(50%);
+ 
 }
 .features-list {
   display: flex;
@@ -241,14 +243,8 @@ address {
   gap: 24px;
 }
 .team-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: 32px;  
   border-radius: 0 0 4px 4px;
-  padding: 0px 0px 32px;
-  width: calc((100%-72px)/4);
+  width: calc((100% - 72px) / 4);
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background: var(--white);
@@ -259,7 +255,7 @@ address {
   height: 260px;
 }
 .team-wrap {
-  padding: 32px 0;
+  padding: 32px 16px;
 }
 
 .team-name {
@@ -307,10 +303,10 @@ address {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  max-width: calc((100%-48px) / 3);
+  max-width: calc((100% - 48px) / 3);
 }
-.portfolio-card-set {
- 
+.portfolio-text {
+  color: var(--slate)
 }
 
 .portfolio-img {
@@ -324,15 +320,14 @@ address {
   
 }
 .portfolio-name {
+  font-weight: 500;
+  font-size: 20px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
+  color: var(--navy-blue)
 }
 
-.portfolio-text {
-  text-align: left;
-  padding: 32px 16px;
-}
 .page-footer {
   padding: 100px 0 100px;
   background-color: #2e2f42;
