--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ address {
   white-space: nowrap;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
-  clip-path: inset(50%);
+  clip-path: inset(100%);
  
 }
 .features-list {
@@ -255,7 +255,7 @@ address {
   height: 260px;
 }
 .team-wrap {
-  padding: 32px 16px;
+  padding: 32px 0;
 }
 
 .team-name {
